--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -294,6 +294,8 @@ a {
   color: rgba(#fff, .9);
   font-weight: bold;
   font-size: 40px;
+  text-transform: uppercase;
+  line-height: 0;
 }
 
 .player-card-nickname {
@@ -345,4 +347,108 @@ a {
     max-width: 40px;
     height: auto;
   }
+}
+
+//-----------------------------------------------------
+// NEW PLAYER
+//-----------------------------------------------------
+.newplayer-page {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+}
+
+.newplayer-title {
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 70px;
+}
+
+.newplayer-section {
+  margin-bottom: 50px;
+}
+
+.newplayer-section-title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.newplayer-textinput {
+  width: 100%;
+  border: 1px solid rgba(#000, .25);
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 20px;
+}
+
+.newplayer-textarea {
+  width: 100%;
+  border: 1px solid rgba(#000, .25);
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 20px;
+}
+
+.newplayer-games {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newplayer-game-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
+  width: 33%;
+  padding: 0 10px;
+}
+
+.newplayer-game-img {
+  max-width: 100%;
+}
+
+.newplayer-game-chbox {
+  display: none;
+}
+
+.newplayer-game-chbox:checked + .newplayer-game-custom-chbox {
+  border: 1px solid $accent;
+  background-color: #ffffff;
+}
+
+.newplayer-game-custom-chbox {
+  border: 1px solid transparent;
+  padding: 10px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.newplayer-btn {
+  width: 100%;
+  max-width: 300px;
+  background-color: $accent;
+  color: #ffffff;
+  padding: 12px 20px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: auto;
+  display: block;
+  cursor: pointer;
+}
+
+.newplayer-playtime-inputs-wrapper {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.newplayer-playtime-input {
+  width: 50px;
+  padding: 10px;
+  margin: 0 10px;
 }
