--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -147,7 +147,6 @@ a {
 .search-page {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   @include max-screen(1199px) {
     flex-direction: column;
   }
@@ -159,6 +158,7 @@ a {
   box-shadow: 0px 2px 6px -3px rgba(0, 0, 0, 0.75);
   padding: 30px;
   border-radius: 4px;
+  align-self: flex-start;
   @include max-screen(1199px) {
     width: 100%;
     margin-bottom: 50px;
@@ -179,6 +179,16 @@ a {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
+}
+
+.search-results-loading {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 .filter-form-title {
